kubernetes/apps/graph/graph/base/graph-explorer-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-explorer-backend
  labels:
    app: graph-explorer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-explorer-backend
  template:
    metadata:
      labels:
        app: graph-explorer-backend
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      containers:
        - name: backend
          image: ghcr.io/konnektr-io/graph-explorer-proxy-backend:0.0.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: graph-explorer-backend
  labels:
    app: graph-explorer-backend
spec:
  selector:
    app: graph-explorer-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
