kubernetes/apps/graph/graph/base/graph-explorer-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-explorer-frontend
  labels:
    app: graph-explorer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-explorer-frontend
  template:
    metadata:
      labels:
        app: graph-explorer-frontend
    spec:
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      containers:
        - name: frontend
          image: ghcr.io/konnektr-io/graph-explorer-frontend:0.0.40
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 5m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: graph-explorer-frontend
  labels:
    app: graph-explorer-frontend
spec:
  selector:
    app: graph-explorer-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
